--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ url = "/"
 weight = 1
 
 [[menu.main]]
-name = "Writings"
+name = "Posts"
 url = "/posts"
 weight = 2
 
@@ -25,11 +25,6 @@ weight = 2
 name = "Tags"
 url = "/tags"
 weight = 3
-
-[[menu.main]]
-name = "About"
-url = "/about"
-weight = 4
 
 [markup]
   [markup.tableOfContents]
@@ -52,17 +47,17 @@ weight = 4
   colortheme = "white" # dark, light, white, or classic
   rss = true # generate rss feed. default value is false
   googleAnalyticsAsync = true # use asynchronous tracking. Synchronous tracking by default
-  showAllPostsArchive = false # default
-
+  showAllPostsArchive = true # default
   # Home page settings
   description = "Hi I'm Kane - a Front-End developer, I'm currently working in Nashtech. In addition, writing blog helps me keep the stories and rearrange my knowledge in the technical journey. Thanks for all."
   mainSection = "posts" # your main section
+  mainSectionTitle = "Posts"
   showAllPostsOnHomePage = false # default
-  postsOnHomePage = 5 # this option will be ignored if showAllPostsOnHomePage is set to true
+  postsOnHomePage = 10 # this option will be ignored if showAllPostsOnHomePage is set to true
   tagsOverview = true # show tags overview by default.
   showProjectsList = true # show projects list by default (if projects data file exists).
   projectsUrl = "https://github.com/kanetu" # title link for projects list
-
+  logo = "/images/logo1.png"
   # https://gohugo.io/functions/format/#hugo-date-and-time-templating-reference
   dateFormat = "2006-01-02" # default
 
